testing the new recommendations about how to use the Jekyll Minimal theme

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,1 +1,4 @@
-theme: jekyll-theme-minimal
+remote_theme: pages-themes/minimal@v0.2.0
+
+title: [About ICA Records in Contexts Ontology (RiC-O)]
+description: [An information website about ICA Records in Contexts Ontology - what it is and why use it, its current status, where to download it, its roadmap, events, projects, and how to migrate data conforming to its previous version to data conforming to its current version.]
