--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,4 @@
-remote_theme: pages-themes/minimal@v0.2.0
-
+theme: jekyll-theme-minimal
 
 title: [About ICA Records in Contexts Ontology (RiC-O)]
 description: [An information website about Records in Contexts Ontology (RiC-O).]
