changed the config and CSS, and the h1 of the readme file

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,1 +1,5 @@
 theme: jekyll-theme-minimal
+
+
+title: [About ICA Records in Contexts Ontology (RiC-O)]
+description: [An information website about Records in Contexts Ontology (RiC-O).]
